[gd_scene load_steps=7 format=3 uid="uid://c35qm8uqe744l"]

[ext_resource type="Script" uid="uid://cmne54c2nh4fp" path="res://scripts/game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://daxawlhuhjiyo" path="res://assets/alien_attack_assets/textures/bg.png" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://cf0pt4vmykdx4" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://5bi2652ku40n" path="res://scenes/enemy_spawner.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://bm7st03xf7qyk" path="res://scenes/hud.tscn" id="5_iywne"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbhrr"]
size = Vector2(93, 971)

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1281.0
offset_bottom = 722.0
texture = ExtResource("1_uwrxv")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(161, 371)

[node name="EnemySpawner" parent="." instance=ExtResource("3_lnu2h")]

[node name="EnemyDeathZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDeathZone"]
position = Vector2(-130, 371.5)
shape = SubResource("RectangleShape2D_lbhrr")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("5_iywne")]

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="area_entered" from="EnemyDeathZone" to="." method="_on_enemy_death_zone_area_entered"]
